[gd_scene load_steps=4 format=3 uid="uid://cmaonqfe7bwv2"]

[ext_resource type="Script" uid="uid://b2fc1ou4c8tgn" path="res://scripts/explosion_base.gd" id="1_he5p0"]

[sub_resource type="SphereShape3D" id="SphereShape3D_76ars"]
resource_local_to_scene = true

[sub_resource type="CylinderMesh" id="CylinderMesh_76ars"]
resource_local_to_scene = true
height = 0.1

[node name="ExplosionBase" type="Area3D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_he5p0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_76ars")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_76ars")

[node name="TimerLifetime" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TimerLifetime" to="." method="_on_timer_lifetime_timeout"]
